<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/calculate_the_odds"
        android:textSize="@dimen/text_size_sixteen"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:src="@drawable/change_icon"
        app:layout_constraintBottom_toBottomOf="@id/switchLayout"
        app:layout_constraintEnd_toStartOf="@id/switchLayout"
        app:layout_constraintTop_toTopOf="@id/switchLayout" />

    <include
        android:id="@+id/switchLayout"
        layout="@layout/custom_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/fosco_light_blue"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />


    <TextView
        android:id="@+id/tvSelectTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/select_team"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_fourteen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="Selected the first team" />


    <Spinner
        android:id="@+id/first_team_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/spinner_background"
        android:divider="@null"
        android:popupBackground="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectTeam"
        tools:listitem="@layout/item_spinner" />


    <TextView
        android:id="@+id/tvSelectAlternativeTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/select_team_alternative"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_fourteen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_team_spinner"
        tools:text="Selected the first team" />


    <Spinner
        android:id="@+id/second_team_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/spinner_background"
        android:divider="@null"
        android:popupBackground="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectAlternativeTeam"
        tools:listitem="@layout/item_spinner" />

    <com.vitorthemyth.components.CustomInputField
        android:id="@+id/valueAndOdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="@id/first_team_spinner"
        app:layout_constraintStart_toStartOf="@id/first_team_spinner"
        app:layout_constraintTop_toBottomOf="@id/second_team_spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculateProb"
        style="@style/CustomButton"
        android:text="@string/calc_probs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valueAndOdd" />


    <ImageView
        android:id="@+id/loading_gif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculateProb"
        tools:src="@drawable/loading_ball"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/statusLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_intermediate"
        android:text="@string/loading"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculateProb"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/statusLoadingPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusLoading"
        tools:visibility="gone" />


    <TextView
        android:id="@+id/tvResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/results"
        android:textSize="@dimen/text_size_sixteen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusLoadingPercent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@color/fosco_light_blue"
        app:layout_constraintTop_toBottomOf="@id/tvResults" />

    <TextView
        android:id="@+id/winProbLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/first_team_spinner"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:text="Win prob:" />

    <TextView
        android:id="@+id/winProbValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_intermediate"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/winProbLabel"
        app:layout_constraintStart_toEndOf="@id/winProbLabel"
        app:layout_constraintTop_toTopOf="@id/winProbLabel"
        tools:text="2.33%" />


    <TextView
        android:id="@+id/loseProbLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/first_team_spinner"
        app:layout_constraintTop_toBottomOf="@id/winProbLabel"
        tools:text="Win prob:" />

    <TextView
        android:id="@+id/loseProbValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_intermediate"
        android:textColor="@color/red_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/loseProbLabel"
        app:layout_constraintStart_toEndOf="@id/loseProbLabel"
        app:layout_constraintTop_toTopOf="@id/loseProbLabel"
        tools:text="2.33%" />


    <TextView
        android:id="@+id/evLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/first_team_spinner"
        app:layout_constraintTop_toBottomOf="@id/loseProbLabel"
        tools:text="Win prob:" />

    <TextView
        android:id="@+id/evValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_intermediate"
        android:textColor="@color/green_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/evLabel"
        app:layout_constraintStart_toEndOf="@id/evLabel"
        app:layout_constraintTop_toTopOf="@id/evLabel"
        tools:text="2.33%" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="winProbLabel,winProbValue,loseProbLabel,loseProbValue,evLabel,evValue,tvResults,divider2" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="statusLoadingPercent,statusLoading" />

</androidx.constraintlayout.widget.ConstraintLayout>